tests/purs/failing/PrimModuleReserved.purs
-- @shouldFailWith CannotDefinePrimModules
module Main where

import Prim
